[package]
name = "wg-mtu"
author = "Ryan Butler"
about = "Retrieves best MTU for specific wireguard link."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
get_if_addrs = "0.5.3"
pnet = "0.34.0"
